2008-01-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/BansheeActionGroup.cs: New Add
	method that takes params ActionEntry [] and sets all the created Actions
	as IsImportant=true so if they are used in the toolbar their text will
	appear.

	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
	Use new Add(params ActionEntry []) override to add actions.

	* src/Core/Nereid/Nereid/PlayerInterface.cs: Set the toolbar style to
	BothHoriz.

	* src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs: Inherit
	from BansheeActionGroup.

2008-01-29  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceRowRenderer.cs:
	Draw the same cairo selections that the track list view uses, overriding
	the crappy GTK selection for the tree view

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: 
	Set up a cairo context and list view graphics for the renderer

2008-01-29  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/BansheeActionGroup.cs:
	Make protected properties public - they should be since they are just
	wrappers to functionality that can be used via alternate API

	* src/Core/Banshee.ThickClient/Banshee.Gui/InterfaceActionService.cs:
	Automatically load/unload XML UI resources and actions for the active
	source if actions and UI are set in the source properties

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs:
	Do not crash if the source context menu is null

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs:
	Reset the highlight on left mouse click

	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
	Split the XML UI between two definitions since one needs loading/unloading
	as the active source changes (the toolbar UI)

	* src/Extensions/Banshee.PlayQueue/Resources/ActiveSourceUI.xml: UI